varias funcionalidades novas

--- a/ws_test.html
+++ b/ws_test.html
@@ -15,6 +15,11 @@
     .row-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 12px; }
     .actions { display: flex; gap: 8px; margin-top: 12px; }
     .actions button { width: auto; }
+    .chat { margin-top: 12px; border: 1px solid #d9d9e8; border-radius: 8px; background: #fafafe; height: 320px; overflow-y: auto; padding: 10px; }
+    .msg { max-width: 80%; margin: 8px 0; padding: 8px 10px; border-radius: 10px; background: #fff; border: 1px solid #e5e5f2; }
+    .msg.mine { margin-left: auto; background: #e8f6ff; border-color: #bde6ff; }
+    .msg-head { display: flex; justify-content: space-between; gap: 8px; font-size: 11px; color: #5a5a6d; margin-bottom: 4px; }
+    .msg-content { font-size: 13px; line-height: 1.35; white-space: pre-wrap; word-break: break-word; }
     .log { margin-top: 12px; background: #0f1020; color: #e7e7f5; padding: 10px; border-radius: 6px; height: 260px; overflow: auto; font-family: Consolas, monospace; font-size: 12px; }
     .status { font-size: 12px; color: #444; margin-top: 8px; }
     .badge { display: inline-block; padding: 2px 6px; border-radius: 10px; font-size: 11px; background: #eee; }
@@ -49,6 +54,9 @@
       </div>
     </div>
 
+    <label>Chat</label>
+    <div id="chat" class="chat"></div>
+
     <div class="actions">
       <button id="connectBtn">Conectar</button>
       <button id="disconnectBtn" disabled>Desconectar</button>
@@ -60,6 +68,8 @@
     <div class="actions">
       <button id="sendBtn" disabled>Enviar via WS</button>
       <button id="sendHttpBtn">Enviar via HTTP (/ws/message)</button>
+      <input id="historyLimit" type="number" min="1" value="50" style="width:90px" />
+      <button id="fetchMessagesBtn">Carregar histórico (/messages)</button>
       <button id="clearBtn">Limpar log</button>
     </div>
 
@@ -73,7 +83,9 @@
 <script>
   const el = (id) => document.getElementById(id);
   const logBox = el('log');
+  const chatBox = el('chat');
   let socket = null;
+  const userNameCache = {};
 
   function log(msg) {
     const time = new Date().toLocaleTimeString();
@@ -83,6 +95,83 @@
 
   function setStatus(text) {
     el('status').textContent = text;
+  }
+
+  function getApiBase() {
+    return el('wsBase').value.trim().replace(/^ws/, 'http');
+  }
+
+  function toTime(value) {
+    if (!value) return new Date().toLocaleTimeString();
+    const date = new Date(value);
+    if (Number.isNaN(date.getTime())) return String(value);
+    return date.toLocaleTimeString();
+  }
+
+  function normalizeMessage(raw) {
+    if (!raw) return null;
+    if (typeof raw === 'string') {
+      return {
+        sender: 'sistema',
+        content: raw,
+        when: new Date().toISOString()
+      };
+    }
+    return {
+      sender: raw.senderId || raw.sender_id || raw.userId || raw.user_id || 'desconhecido',
+      content: raw.content || raw.message || '',
+      when: raw.createdAt || raw.created_at || new Date().toISOString()
+    };
+  }
+
+  async function resolveUserName(userID) {
+    if (!userID) return 'desconhecido';
+    if (userNameCache[userID]) return userNameCache[userID];
+
+    const base = getApiBase();
+    const url = base.replace('/ws/connect', `/GetUserByID/${encodeURIComponent(userID)}`);
+    try {
+      const res = await fetch(url);
+      if (!res.ok) {
+        userNameCache[userID] = userID;
+        return userID;
+      }
+      const data = await res.json();
+      const name = data.name || data.Name || userID;
+      userNameCache[userID] = name;
+      return name;
+    } catch (_) {
+      userNameCache[userID] = userID;
+      return userID;
+    }
+  }
+
+  async function addChatMessage(raw) {
+    const msg = normalizeMessage(raw);
+    if (!msg || !msg.content) return;
+
+    const mine = msg.sender === el('userId').value.trim();
+    const senderLabel = mine ? 'Você' : await resolveUserName(msg.sender);
+    const row = document.createElement('div');
+    row.className = `msg${mine ? ' mine' : ''}`;
+
+    const head = document.createElement('div');
+    head.className = 'msg-head';
+    const sender = document.createElement('span');
+    sender.textContent = senderLabel;
+    const when = document.createElement('span');
+    when.textContent = toTime(msg.when);
+    head.appendChild(sender);
+    head.appendChild(when);
+
+    const content = document.createElement('div');
+    content.className = 'msg-content';
+    content.textContent = msg.content;
+
+    row.appendChild(head);
+    row.appendChild(content);
+    chatBox.appendChild(row);
+    chatBox.scrollTop = chatBox.scrollHeight;
   }
 
   function buildWsUrl() {
@@ -117,10 +206,10 @@
       log(`Recebido: ${event.data}`);
       try {
         const parsed = JSON.parse(event.data);
-        if (parsed && parsed.content) {
-          log(`Mensagem (content): ${parsed.content}`);
-        }
-      } catch (_) {}
+        void addChatMessage(parsed);
+      } catch (_) {
+        void addChatMessage(event.data);
+      }
     });
 
     socket.addEventListener('close', () => {
@@ -160,7 +249,7 @@
       return;
     }
 
-    const base = el('wsBase').value.trim().replace(/^ws/, 'http');
+    const base = getApiBase();
     const url = base.replace('/ws/connect', '/ws/message') + `?id=${encodeURIComponent(id)}&dev=${el('devBypass').value}`;
 
     try {
@@ -176,8 +265,53 @@
     }
   });
 
+  el('fetchMessagesBtn').addEventListener('click', async () => {
+    const room = el('roomId').value.trim();
+    if (!room) {
+      log('Preencha roomId para buscar mensagens.');
+      return;
+    }
+
+    const limitRaw = el('historyLimit').value.trim();
+    const limit = Number(limitRaw) > 0 ? Number(limitRaw) : 50;
+    const base = getApiBase();
+    const url = base.replace('/ws/connect', '/messages') +
+      `?room=${encodeURIComponent(room)}&limit=${encodeURIComponent(limit)}`;
+
+    try {
+      const res = await fetch(url);
+      const text = await res.text();
+      if (!res.ok) {
+        log(`Get messages HTTP ${res.status}: ${text}`);
+        return;
+      }
+
+      let items = [];
+      try {
+        items = JSON.parse(text);
+      } catch (_) {
+        log(`Resposta inválida: ${text}`);
+        return;
+      }
+
+      log(`Histórico carregado: ${items.length} mensagens`);
+      chatBox.innerHTML = '';
+      const ordered = [...items].reverse();
+      for (const msg of ordered) {
+        await addChatMessage(msg);
+        const when = msg.createdAt || msg.created_at || '';
+        const senderID = msg.senderId || msg.sender_id;
+        const senderName = await resolveUserName(senderID);
+        log(`[history] ${when} ${senderName}: ${msg.content}`);
+      }
+    } catch (e) {
+      log(`Erro ao buscar mensagens: ${e.message}`);
+    }
+  });
+
   el('clearBtn').addEventListener('click', () => {
     logBox.textContent = '';
+    chatBox.innerHTML = '';
   });
 </script>
 </body>
